Minor Update: Updated workflow

--- a/.github/workflows/create-artifact.yml
+++ b/.github/workflows/create-artifact.yml
@@ -25,6 +25,9 @@ jobs:
         mkdir YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}
         cp manifest.json YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}
         cp -r ./scripts ./media ./html ./styles YouTube_Max_Quality_Switcher_v${CURRENT_RELEASE_VERSION}/
+
+    - name: Ensure artifacts directory exists
+      run: mkdir -p ./artifacts/
       
     - name: Zip the directory
       run: |
