--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,6 +14,12 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Extract version from manifest.json
+      run: |
+          sudo apt-get install -y jq
+          VERSION=$(jq -r .version manifest.json)
+          echo "CURRENT_RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+
     - name: Install GitHub CLI and Login
       run: |
          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C99B11DEB97541F0 23F3D4EA75716059
@@ -22,14 +28,6 @@ jobs:
          sudo apt install -y gh
          gh auth login --with-token <<< "${{ secrets.github_token }}"
 
-    - name: Get latest draft release info
-      id: get_draft
+    - name: Create GitHub Release with Artifact from repo
       run: |
-        RELEASE_DATA=$(gh release list --repo ${{ github.repository }} --limit 5 | grep draft)
-        TAG_NAME=$(echo "$RELEASE_DATA" | awk '{print $1}')
-        echo "Latest draft release tag: $TAG_NAME"
-        echo "RELEASE_TAG=$TAG_NAME" >> $GITHUB_ENV
-
-    - name: Publish the draft release with Artifact from repo
-      run: |
-         gh release upload ${{ env.RELEASE_TAG }} ./artifacts/YouTube_Max_Quality_Switcher_v${{ env.RELEASE_TAG }}.zip --repo ${{ github.repository }}
+         gh release create v${{ env.CURRENT_RELEASE_VERSION }} YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}.zip --title "Release v${{ env.CURRENT_RELEASE_VERSION }}" --notes "Release notes for v${{ env.CURRENT_RELEASE_VERSION }}"
