Major Update: Updated workflows for artifact and release creation

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -14,6 +14,16 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Install GitHub CLI and Login
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C99B11DEB97541F0 23F3D4EA75716059
+          sudo apt-add-repository https://cli.github.com/packages
+          sudo apt update
+          sudo apt install -y gh
+          gh auth login --with-token <<< "${GH_TOKEN}"
+
     - name: Get latest draft release info
       id: get_draft
       run: |
@@ -38,15 +48,6 @@ jobs:
           sudo apt-get install -y jq
           VERSION=$(jq -r .version manifest.json)
           echo "CURRENT_RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
-    
-    - name: Install GitHub CLI and Login
-      if: env.DRAFT_NOT_FOUND == '1'
-      run: |
-         sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C99B11DEB97541F0 23F3D4EA75716059
-         sudo apt-add-repository https://cli.github.com/packages
-         sudo apt update
-         sudo apt install -y gh
-         gh auth login --with-token <<< "${{ secrets.github_token }}"
     
     - name: Create GitHub Release with Artifact (Fallback Mode)
       if: env.DRAFT_NOT_FOUND == '1'
