--- a/.github/workflows/commit-message-lint.yml
+++ b/.github/workflows/commit-message-lint.yml
@@ -13,7 +13,9 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
       with:
-        fetch-depth: 0  # Fetch all history
+        token: ${{ secrets.github_token }}
+        fetch-depth: 0
+        ref: ${{ github.ref }}
 
     - name: Lint Commit Messages
       run: |
