--- a/.github/workflows/deploy-to-chrome-webstore.yml
+++ b/.github/workflows/deploy-to-chrome-webstore.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Identify latest ZIP
         run: |
           echo "LATEST_ZIP=$(ls -t ./artifacts/*.zip | head -n 1)" >> $GITHUB_ENV
-          echo {{$env.LATEST_ZIP}}
+          echo $LATEST_ZIP
 
       - name: Extension upload
         uses: Klemensas/chrome-extension-upload-action@v1.3
