--- a/.github/workflows/deploy-to-chrome-webstore.yml
+++ b/.github/workflows/deploy-to-chrome-webstore.yml
@@ -1,9 +1,10 @@
 name: Deploy to Chrome Web Store
 
 on:
-  release:
-    types:
-      - published
+    workflow_run:
+      workflows: ["Create Release"]
+      types:
+        - completed
 
 jobs:
   deploy:
