--- a/.github/workflows/pr-label-attach.yml
+++ b/.github/workflows/pr-label-attach.yml
@@ -2,9 +2,9 @@ name: Attach PR Version Label
 
 on:
   pull_request:
-    types: [opened, synchronize]
+    types: [ opened, synchronize ]
 
-concurrency: 
+concurrency:
   group: version-bump
   cancel-in-progress: true
 
@@ -38,37 +38,37 @@ jobs:
           BUMP="none"
           TMP_BUMP_FILE=bump.txt
           COMMIT_MSGS=$(git log ${{ github.event.pull_request.base.ref }}...HEAD --pretty=format:"%s")
-        
+          
           echo ========================
           echo "$COMMIT_MSGS" | while IFS= read -r msg; do
             echo
-              
+          
             # Remove all whitespaces
             msg=$(echo "$msg" | sed -e 's/^[[:space:]]*//' -e 's/[[:space:]]*$//')
             echo "Processing commit: '$msg'"
-            
+          
             # Skip empty commit messages
             if [ -z "$msg" ]; then
               continue
             fi
-            
+          
             # Check if the message starts with "Revert" and extract the original commit message.
             if [[ $msg == Revert* ]]; then
                 msg="${msg#Revert \"}" # Remove "Revert " prefix
                 msg="${msg%\"}"        # Remove trailing double quote
             fi
-            
-            if [[ $msg == *"Release: "* ]]; then
+          
+            if [[ $msg == *"Release: "* || $msg == "Major Update: "* ]]; then
                 echo "major" > $TMP_BUMP_FILE
                 break
-            elif [[ $msg == "Major Update: "* || $msg == "New Feature: "* || $msg == "Improvement: "* || $msg == "Performance: "* || $msg == "Bug Fix: "* || $msg == "Security Fix: "* || $msg == "Hotfix: "* ]]; then
+            elif [[ $msg == "Minor Update: "* || $msg == "New Feature: "* || $msg == "Improvement: "* || $msg == "Performance: "* || $msg == "Bug Fix: "* || $msg == "Security Fix: "* || $msg == "Hotfix: "* ]]; then
                 echo "minor" > $TMP_BUMP_FILE
             elif [[ ! -f $TMP_BUMP_FILE ]]; then
-              if [[ $msg == "Minor Update: "* || $msg == "Documentation Update: "* || $msg == "Build: "* || $msg == "CI: "* || $msg == "Style: "* ]]; then
+              if [[ $msg == "Documentation Update: "* || $msg == "Build: "* || $msg == "CI: "* || $msg == "Style: "* ]]; then
                   echo "patch" > $TMP_BUMP_FILE
               fi
             fi
-            
+          
             if [[ -f $TMP_BUMP_FILE ]]; then
                 echo "Calculated version bump for this commit: $(cat $TMP_BUMP_FILE)"
             else
