--- a/manifest.json
+++ b/manifest.json
@@ -36,13 +36,19 @@
   "icons": {
     "16": "./media/icon16.png",
     "48": "./media/icon48.png",
-    "128": "./media/icon128.png"
+    "128": "./media/icon128.png",
+    "256": "./media/icon256.png",
+    "512": "./media/icon512.png",
+    "1024": "./media/icon1024.png"
   },
   "action": {
     "default_icon": {
       "16": "./media/icon16.png",
       "48": "./media/icon48.png",
-      "128": "./media/icon128.png"
+      "128": "./media/icon128.png",
+      "256": "./media/icon256.png",
+      "512": "./media/icon512.png",
+      "1024": "./media/icon1024.png"
     },
     "default_popup": "./html/popup.html"
   }
