--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "YouTube Max Quality Switcher",
   "version": "1.9.0",
-  "description": "Automatically switches YouTube videos to the highest available quality.",
+  "description": "Automatically switches YouTube videos to the highest/selected available quality.",
   "permissions": [
     "storage",
     "activeTab",
