--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -2,7 +2,7 @@ name: Create Release
 
 on:
   workflow_run:
-    workflows: ["Create Zip Artifact"]
+    workflows: [ "Create Zip Artifact" ]
     types:
       - completed
 
@@ -60,8 +60,8 @@ jobs:
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url || env.UPLOAD_URL}}
-          asset_path: ./artifacts/YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}.zip
-          asset_name: YouTube_Max_Quality_Switcher_v${{ env.CURRENT_RELEASE_VERSION }}.zip
+          asset_path: ./artifacts/Auto_Max_Quality_Pro_v${{ env.CURRENT_RELEASE_VERSION }}.zip
+          asset_name: Auto_Max_Quality_Pro_v${{ env.CURRENT_RELEASE_VERSION }}.zip
           asset_content_type: application/zip
         env:
           GITHUB_TOKEN: ${{ secrets.github_token }}
