--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "YouTube Max Quality Switcher",
+  "name": "Auto Max Quality Pro",
   "version": "1.9.0",
-  "description": "Automatically switches YouTube videos to the highest/selected available quality.",
+  "description": "Automatically switches YouTube & Other videos to the highest/selected available quality.",
   "permissions": [
     "storage",
     "activeTab",
