--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,10 @@
         "<all_urls>"
       ],
       "js": [
-        "./scripts/jquery-3.6.0.min.js",
-        "./scripts/script.js"
+        "./scripts/libs/jquery-3.6.0.min.js",
+        "./scripts/common.js",
+        "./scripts/main.js",
+        "./scripts/youtube.js"
       ],
       "all_frames": true
     }
@@ -26,7 +28,6 @@
   "web_accessible_resources": [
     {
       "resources": [
-        "./styles/bootstrap_4.5.2_css_bootstrap.min.css"
       ],
       "matches": [
         "<all_urls>"
