--- a/.github/workflows/create-zip-artifact.yml
+++ b/.github/workflows/create-zip-artifact.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   artifact-zip:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions: write-all
     if: github.event.workflow_run.conclusion == 'success'
     steps:
