CI: Updated workflows

--- a/.github/workflows/pr-label-attach.yml
+++ b/.github/workflows/pr-label-attach.yml
@@ -10,7 +10,7 @@ concurrency:
 
 jobs:
   attach-label:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions: write-all
     steps:
       - name: Checkout code
