--- a/.github/workflows/version-updates.yml
+++ b/.github/workflows/version-updates.yml
@@ -13,7 +13,7 @@ concurrency:
 jobs:
   update-version:
     if: github.event.pull_request.merged == true
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions: write-all
     steps:
 
