--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -17,13 +17,9 @@ jobs:
         with:
           fetch-depth: 0 # needed for git log history
 
-      - name: Install GitHub CLI and Login
+      - name: Authenticate GitHub CLI
         run: |
-          sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C99B11DEB97541F0 23F3D4EA75716059
-          sudo apt-add-repository https://cli.github.com/packages
-          sudo apt update
-          sudo apt install -y gh
-          gh auth login --with-token <<< "${{ secrets.github_token }}"
+          echo "${{ secrets.github_token }}" | gh auth login --with-token
 
       - name: Get release version
         id: get_version
